testing/errors/expressionnotstring1.a
	*=$1000
	!sl 3	; -> "Expression did not return a string."
